# robosub

./: .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  CMakeLists.txt  README.md  out_camera_data.yml  package.xml  wait_for_apt.sh
action/: .AI.action.swp  AI.action
cfg/: Dynamic.cfg
firmware/: BNO055_ROS.ino  CPPLINT.cfg
launch/: ai.launch  calibrate_imu.launch  cameras.launch  cobalt.launch  control.launch  core.launch  dead_reckoning.launch  depth.launch  example.launch  gamepad.launch  hydrophones.launch  imu.launch  joystick.launch  joystick_control.launch  joystick_driver.launch  joystick_teleop.launch  localization.launch  localizationHz.test  minimal.launch  movement.launch  record.launch  roscore.launch  rviz.launch  ryan_undistortion.launch  sensors.launch  sim.launch  stereoVision.launch  temperature_monitor.launch  thrusters.launch  unbag_and_undistort.launch  undistortion.launch  vision.launch
models/: cobalt.urdf
msg/: BatteryDetailed.msg  Float32ArrayStamped.msg  HydrophoneDeltas.msg  HydrophoneMetadata.msg  HydrophonePingStamped.msg  HydrophoneSampleArray.msg  Localization.msg  LocalizationStatus.msg  ObstaclePos.msg  ObstaclePosArray.msg  Position.msg  PositionArrayStamped.msg  PositionsStamped.msg  QuaternionStampedAccuracy.msg  RawImu.msg  Trax.msg  WeightedPosition.msg  control.msg  rgb.msg  (+6 more)
src/examples/: CMakeLists.txt  DynamicParameters.cpp  bno.cpp  child.cpp  data_analyzer.cpp  fork.cpp  fork_child.cpp  fork_parent.cpp  parameter.cpp  pub_sub.cpp  pub_sub.py  serial_publisher.cpp  serial_subscriber.cpp  serial_talker.cpp  tf_broadcaster.py
src/examples/test/: CMakeLists.txt  serial_subscriber.test  test_pub_sub.cpp  test_serial_subscriber.cpp
src/hydrophones/: AnalogMeasurement.h  AnalogPacket.cpp  AnalogPacket.h  CMakeLists.txt  DataStream.cpp  DataStream.h  DataStreamServer.cpp  DataStreamServer.h  MetadataPacket.cpp  MetadataPacket.h  cross_correlator_bin.cpp  hydrophone_stream_bin.cpp  rs_types.h  scrappy_publisher.cpp  stream_logger.cpp
src/localization/: CMakeLists.txt  Gyrus.py  TopicReader.py  bottom_facing_cam_optical_flow.py  dead_reckoning.cpp  filter_sensors.cpp  filter_sensors.h  filter_utilities.h  lin_accel_kalman_filter.cpp  lin_accel_kalman_filter.h  localization.cpp  localization_system.cpp  localization_system.hpp  obstacle_map.cpp  obstacle_map.h  particle_cloud_histogram.py  particle_filter.cpp  particle_filter.h  robosub_sensors.cpp  robosub_sensors.h
src/localization/test/: localizationHz.test
src/localization/tests/: CMakeLists.txt  localizationSystem.test  test_localization_system.cpp
src/movement/: CMakeLists.txt  MaestroThrusterDriver.cpp  MaestroThrusterDriver.h  ThrusterController.cpp  ThrusterController.hpp  control.cpp  control_system.cpp  control_system.h  control_system.hpp  control_wrapper.py  maestro.hpp  maestro_class.cpp  maestro_class.hpp  maestro_thruster_controller.cpp  maestro_thruster_controller.hpp  maestro_thruster_driver.cpp  maestro_thruster_driver.h  rotation_engine.cpp  rotation_engine.hpp  thruster.cpp  thruster_maestro.cpp  thruster_sabertooth.cpp  thruster_serial.cpp  thruster_serial.hpp
src/movement/test/: CMakeList.txt  CMakeLists.txt  control_system.test  maestro_launch.test  test_control_keep_alive.cpp  test_control_system.cpp  test_maestro_thruster.cpp  test_thruster_maestro.cpp  test_thruster_sabertooth.cpp  thruster_maestro.test  thruster_sabertooth.test
src/sensors/: Bno055.cpp  Bno055.h  CMakeLists.txt  PniTrax.cpp  PniTrax.h  bno.cpp  bno055_calibration.cpp  bno055_sensor.cpp  bno_example.cpp  depth.cpp  hydrophone_bridge.py  hydrophone_middleman.py  imu.cpp  localization.cpp  localization_system.cpp  localization_system.hpp  pinger_bearing.cpp  print_orientation.cpp  sensor.cpp  simulator_bridge.cpp  sub_tf_broadcaster.py  trax_calibration.cpp  trax_sensor.cpp  trilateration.cpp
src/utility/: CMakeLists.txt  FTNode.cpp  FTNode.h  ThrottledPublisher.hpp  ThrottledSubscriber.hpp  breathe.cpp  ftdi_serial.cpp  ftdi_serial.hpp  math.cpp  math.hpp  serial.cpp  serial.hpp  serial_testbench.cpp  serial_testbench.hpp  spawn_process.cpp  spawn_process.hpp  test_tools.cpp  test_tools.hpp
src/vision/: CMakeLists.txt  CameraRepublisher.cpp  ColorProcessor.cpp  ColorProcessor.hpp  FeatureProcessor.cpp  FeatureProcessor.hpp  SharedImageHeader.hpp  SharedImageReader.cpp  SharedImageReader.hpp  SharedImageWriter.cpp  SharedImageWriter.hpp  StereoDisparity.cpp  StereoProcessor.cpp  StereoProcessor.hpp  Vision.cpp  VisionProcessor.cpp  VisionProcessor.hpp  VisionProcessor.py  calibrate.py  fisheye_undistortion.cpp  image_converter.py  image_publisher.cpp  new_stereo_node.cpp  stereo_capture.cpp  stereo_node.py
src/vision/calib/: CMakeLists.txt  Calibration.cpp  CalibrationSettings.cpp  CalibrationSettings.hpp  MonoCalibrator.cpp  MonoCalibrator.hpp  StereoCalibration.cpp  StereoCalibrator.cpp  StereoCalibrator.hpp  StereoStandaloneCalibration.cpp  StereoStandaloneCalibrator.cpp  StereoStandaloneCalibrator.hpp  UndistortMono.cpp  Undistortion.cpp  default.xml  out_camera_data.xml  stereo_default.xml  stereo_out_camera_data.xml
src/vision/elas/: elas.cpp  filter.cpp  filter.h  matrix.cpp  triangle.cpp  triangle.h
src/vision/feature_detectors/: BuoyDetector.cpp  CMakeLists.txt  CentroidDetector.cpp  ChannelDetector.cpp  MarkerBinDetector.cpp  ObstacleDetector.hpp  OctagonDetector.cpp  StartGateDetector.cpp  TorpedoTargetDetector.cpp
src/vision/feature_processors/: BuoyDetector.cpp  CMakeLists.txt  CentroidDetector.cpp  CentroidProcessor.cpp  FeatureType.hpp  MarkerBinDetector.cpp  ObstacleDetector.hpp  OctagonDetector.cpp
src/vision/filters/: BinaryFilter.hpp  CMakeLists.txt  CloseFilter.cpp  CloseFilter.hpp  ConvertFilter.cpp  ConvertFilter.hpp  Filter.cpp  Filter.hpp  FilterSet.cpp  FilterSet.hpp  InRangeFilter.cpp  InRangeFilter.hpp  MedianBlurFilter.cpp  MedianBlurFilter.hpp  OpenFilter.cpp  OpenFilter.hpp  OrFilter.cpp  OrFilter.hpp
src/vision/util/: CMakeLists.txt  UnbagAndUndistort.cpp  Undisbagtion.cpp  Undisbagtion_old.cpp
(+208 files in other folders)
