add_library(feature_processors CentroidDetector.cpp
                               StartGateDetector.cpp
                               BuoyDetector.cpp
                               ChannelDetector.cpp
                               MarkerBinDetector.cpp
                               TorpedoTargetDetector.cpp
                               OctagonDetector.cpp)
