add_library(vision_filters CloseFilter.cpp
                           ConvertFilter.cpp
                           InRangeFilter.cpp
                           MedianBlurFilter.cpp
                           OpenFilter.cpp
                           OrFilter.cpp
                           
                           FilterSet.cpp

)
